<resources>
    <string name="app_name">Bzyness</string>

    <!-- Welcome Slider Screens -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book Movie Tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">The easiest way to order food from your favourite restaurant</string>

    <string name="slide_4_title">World Travels</string>
    <string name="slide_4_desc">The easiest way to order food from your favourite restaurant</string>

    <string name="play_again_desc">To see the welcome slider again, go to Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_messenger">Messenger</string>
    <string name="nav_my_bzyness">My Bzyness</string>
    <string name="nav_bzyness_cards">Bzyness Cards</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Messenger</item>
        <item>My Bzyness</item>
        <item>Bzyness Cards</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Login and Register -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already Registered! Login Me.</string>
    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
