<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_messenger"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/nav_messenger" />
        <item
            android:id="@+id/nav_my_bzyness"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_my_bzyness" />
        <item
            android:id="@+id/nav_bzyness_cards"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/nav_bzyness_cards" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item
        android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>